Fixing monitoring interceptors consumer configuration.

--- a/connect-distributed.properties
+++ b/connect-distributed.properties
@@ -21,3 +21,4 @@ plugin.path=/Users/benedikt/confluent-7.6.1/share/java
 
 producer.interceptor.classes=io.confluent.monitoring.clients.interceptor.MonitoringProducerInterceptor
 producer.confluent.monitoring.interceptor.bootstrap.servers=localhost:9092
+consumer.confluent.monitoring.interceptor.bootstrap.servers=localhost:9092
