adding hearbeat and checkpoint connectors. Checkpoint connector does not emit anything yet.

--- a/checkpoint.json.template
+++ b/checkpoint.json.template
@@ -1,8 +1,8 @@
 {
-  "name":"mm2",
+  "name":"checkpoint",
   "config": {
-    "connector.class": "org.apache.kafka.connect.mirror.MirrorSourceConnector",
-    "name":"mm2",
+    "connector.class": "org.apache.kafka.connect.mirror.MirrorCheckpointConnector",
+    "name":"checkpoint",
     "key.converter": "org.apache.kafka.connect.converters.ByteArrayConverter",
     "value.converter": "org.apache.kafka.connect.converters.ByteArrayConverter",
     "source.cluster.alias":"source",
