--- a/connect-distributed.properties
+++ b/connect-distributed.properties
@@ -1,10 +1,9 @@
 bootstrap.servers=localhost:9092
+
 group.id=connect-cluster
 
-key.converter=org.apache.kafka.connect.json.JsonConverter
-value.converter=org.apache.kafka.connect.json.JsonConverter
-key.converter.schemas.enable=true
-value.converter.schemas.enable=true
+key.converter=org.apache.kafka.connect.converters.ByteArrayConverter
+value.converter=org.apache.kafka.connect.converters.ByteArrayConverter
 
 offset.storage.topic=connect-offsets
 offset.storage.replication.factor=1
